Updated KPCLib to 2.0.3

--- a/PassXYZLib/PassXYZLib.csproj
+++ b/PassXYZLib/PassXYZLib.csproj
@@ -17,7 +17,7 @@
 
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 
-    <Version>2.0.1-rc.3</Version>
+    <Version>2.0.1</Version>
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
@@ -25,7 +25,7 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Markdig" Version="0.23.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="PassXYZ" Version="2.1.5.25" />
+    <PackageReference Include="PassXYZ" Version="2.1.5.28" />
   </ItemGroup>
 
   <ItemGroup>
