--- a/PassXYZLib.nuspec
+++ b/PassXYZLib.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
     <metadata>
         <id>PassXYZLib</id>
-        <version>2.0.3</version>
+        <version>2.1.0</version>
         <authors>Roger Ye</authors>
 		<owners>Roger Ye</owners>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,7 +10,7 @@
 		<projectUrl>https://passxyz.github.io/KPCLib/</projectUrl>
 		<description>This is an extension of KPCLib.</description>
       <releaseNotes>
-      - Fixed dependency issue
+      - Updated to version 2.1.0
     </releaseNotes>
 		<copyright>Roger Ye</copyright>
 		<repository url="https://github.com/passxyz/Lib" />
@@ -19,31 +19,31 @@
         <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="2.1.5.28" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.0.0.1" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-android33.0">
         <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="2.1.5.28" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.0.0.1" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-ios16.1">
         <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="2.1.5.28" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.0.0.1" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-maccatalyst16.1">
         <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="2.1.5.28" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.0.0.1" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-windows10.0.19041">
         <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="2.1.5.28" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.0.0.1" exclude="Build,Analyzers" />
       </group>
     </dependencies>
         <summary>PassXYZLib added additional features for .NET MAUI.</summary>
@@ -52,6 +52,7 @@
     <file src="PassXYZLib/bin/Release/net7.0/PassXYZLib.dll" target="lib/net7.0/PassXYZLib.dll" />
     <file src="PassXYZLib/bin/Release/net7.0/PureOtp.dll" target="lib/net7.0/PureOtp.dll" />
     <file src="PassXYZLib/bin/Release/net7.0-android/PassXYZLib.dll" target="lib/net7.0-android33.0/PassXYZLib.dll" />
+    <file src="PassXYZLib/bin/Release/net7.0-android/PassXYZLib.aar" target="lib/net7.0-android33.0/PassXYZLib.aar" />
     <file src="PassXYZLib/bin/Release/net7.0-android/PassXYZLib.xml" target="lib/net7.0-android33.0/PassXYZLib.xml" />
     <file src="PassXYZLib/bin/Release/net7.0-android/PureOtp.dll" target="lib/net7.0-android33.0/PureOtp.dll" />
     <file src="PassXYZLib/bin/Release/net7.0-ios/PassXYZLib.dll" target="lib/net7.0-ios16.1/PassXYZLib.dll" />
