--- a/PassXYZLib/PassXYZLib.csproj
+++ b/PassXYZLib/PassXYZLib.csproj
@@ -17,15 +17,16 @@
 
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 
-    <Version>2.0.3</Version>
+    <Version>2.1.0</Version>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <EnableUnsafeBinaryFormatterSerialization>true</EnableUnsafeBinaryFormatterSerialization>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="Markdig" Version="0.23.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="PassXYZ" Version="2.1.5.28" />
+    <PackageReference Include="PassXYZ" Version="3.0.0.1" />
   </ItemGroup>
 
   <ItemGroup>
