--- a/PassXYZLib.nuspec
+++ b/PassXYZLib.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
     <metadata>
         <id>PassXYZLib</id>
-        <version>2.1.2</version>
+        <version>2.1.3</version>
         <authors>Roger Ye</authors>
 		<owners>Roger Ye</owners>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -10,40 +10,40 @@
 		<projectUrl>https://passxyz.github.io/KPCLib/</projectUrl>
 		<description>This is an extension of KPCLib.</description>
       <releaseNotes>
-      - Updated to version 2.1.1
+      - Updated PassXYZ to version 3.2.0
     </releaseNotes>
 		<copyright>Roger Ye</copyright>
 		<repository url="https://github.com/passxyz/Lib" />
 		<dependencies>
       <group targetFramework="net7.0">
-        <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
+        <dependency id="HtmlAgilityPack" version="1.11.57" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="3.1.0" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.2.0" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-android33.0">
-        <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
+        <dependency id="HtmlAgilityPack" version="1.11.57" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="3.1.0" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.2.0" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-ios16.1">
-        <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
+        <dependency id="HtmlAgilityPack" version="1.11.57" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="3.1.0" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.2.0" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-maccatalyst16.1">
-        <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
+        <dependency id="HtmlAgilityPack" version="1.11.57" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="3.1.0" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.2.0" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net7.0-windows10.0.19041">
-        <dependency id="HtmlAgilityPack" version="1.11.46" exclude="Build,Analyzers" />
+        <dependency id="HtmlAgilityPack" version="1.11.57" exclude="Build,Analyzers" />
         <dependency id="Markdig" version="0.23.0" exclude="Build,Analyzers" />
         <dependency id="Newtonsoft.Json" version="13.0.3" exclude="Build,Analyzers" />
-        <dependency id="PassXYZ" version="3.1.0" exclude="Build,Analyzers" />
+        <dependency id="PassXYZ" version="3.2.0" exclude="Build,Analyzers" />
       </group>
     </dependencies>
         <summary>PassXYZLib added additional features for .NET MAUI.</summary>
