--- a/UITest/Platforms/Android/AndroidManifest.xml
+++ b/UITest/Platforms/Android/AndroidManifest.xml
@@ -4,6 +4,9 @@
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.RECORD_VIDEO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- Required only if your app needs to access images or photos that other apps created -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
