--- a/UITest/Platforms/MacCatalyst/Info.plist
+++ b/UITest/Platforms/MacCatalyst/Info.plist
@@ -34,5 +34,9 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+  <key>NSCameraUsageDescription</key>
+  <string>This app uses camera for barcode scan.</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>This app needs access to the microphone for record videos</string>
 </dict>
 </plist>
