--- a/PassXYZLib.xunit/PassXYZLib.xunit.csproj
+++ b/PassXYZLib.xunit/PassXYZLib.xunit.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
 	  <UseMaui>true</UseMaui>
+    <MauiVersion>8.0.80</MauiVersion>
 		
 		<SupportedOSPlatformVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$(TargetFramework.Contains('-windows'))">10.0.17763.0</TargetPlatformMinVersion>
