--- a/UITest/UITest.csproj
+++ b/UITest/UITest.csproj
@@ -16,6 +16,7 @@
 		<OutputType>Exe</OutputType>
 		<RootNamespace>UITest</RootNamespace>
 		<UseMaui>true</UseMaui>
+    <MauiVersion>8.0.80</MauiVersion>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
